--- a/src/main/resources/templates/ingresar.html
+++ b/src/main/resources/templates/ingresar.html
@@ -17,7 +17,7 @@
 			<input type="submit" value="Enviar" class="btn btn-primary enviar">
 		</fieldset>
 	</form>
-	<a th:href="@{/login}"><button class="btn btn-secondary detalle">Volver</button></a>
+	<a th:href="@{/}"><button class="btn btn-secondary detalle">Volver</button></a>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
