--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Home</title>
 </head>
 <body>
 	
@@ -18,6 +18,7 @@
 		<a th:href="@{/movimientos}"><button class="btn btn-secondary">Movimientos</button></a>
 		<a th:href="@{/ingresar}"><button class="btn btn-secondary">Ingresar</button></a>
 		<a th:href="@{/extraer}"><button type="button" class="btn btn-secondary">Extraer</button></a>
+		<a th:href="@{/transferencia}"><button type="button" class="btn btn-secondary">Transferencia</button></a>
 	</nav>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	
