--- a/src/main/resources/templates/movimientos.html
+++ b/src/main/resources/templates/movimientos.html
@@ -4,7 +4,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Movimientos</title>
 </head>
 <body>
 	<nav class="nav">
