--- a/src/main/resources/templates/transferencia.html
+++ b/src/main/resources/templates/transferencia.html
@@ -4,15 +4,19 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 <meta charset="UTF-8">
-<title>Extraer dinero</title>
+<title>Transferencia</title>
 </head>
 <body>
 	<h3><span class="text-danger" th:text="${mensaje}"></span></h3>
-	<form th:action="@{/extraer}" method="post" class="border border-dark-subtle rounded bg-light form">
+	<form th:action="@{/transferencia}" method="post" class="border border-dark-subtle rounded bg-light form">
 		<fieldset>
-			<legend>Introduzca cantidad: </legend>
+			<legend>Introduzca cuenta de destino y cantidad: </legend>
 				<div class="mb-3">
-					<input type="number" name="extraer" placeholder="Retirar dinero" step="0.01" required class="form-control input">
+					<input type="number" name="idCuentaDestino" placeholder="Cuenta de destino" required class="form-control input">
+				</div>
+				
+				<div class="mb-3">
+					<input type="number" name="cantidad" placeholder="cantidad" step="0.01" required class="form-control input">
 				</div>
 			<input type="submit" value="Enviar" class="btn btn-primary enviar">
 		</fieldset>
